DOC: Update readme for API function additions.

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,3 +15,26 @@ knitr::opts_chunk$set(
 # cwl - Common workflow language support
 
 Parse and work with the common workflow language, cwl. (See http://www.commonwl.org).
+
+## Some simple examples
+
+### Hello world.
+
+This example runs a simple hello world example.
+
+```{r}
+library(cwl)
+
+# Set up a simple data.yml file
+fileName <- tempfile()
+data <- c( "message: Hello world!", "" )
+writeLines(data, fileName)
+
+# Load the data file as an object
+cwlDataObj <- readCwlData(fileName)
+
+# Examine the data file object
+class(cwlDataObj)
+length(cwlDataObj)
+cwlDataObj[1]
+```
