--- a/README.Rmd
+++ b/README.Rmd
@@ -14,27 +14,20 @@ knitr::opts_chunk$set(
 
 # cwl - Common workflow language support
 
-Parse and work with the common workflow language, cwl. (See http://www.commonwl.org).
+This package (cwl) is designed to parse and work with the Common Workflow Language, CWL. ( http://www.commonwl.org). It currently does very little, it is only a stub in which various representations and algorithms are being played with. The first 0.0.1 release will be able to run simple command line programs locally using a very limited subset of CWL.
 
-## Some simple examples
+## Simple command line tool examples.
 
-### Hello world.
+These assume you already have a _tool.cwl_ and a _data.yaml_ file. See the introductory vignette for details and sample files.
 
-This example runs a simple hello world example.
+```{r, eval=FALSE}
+# Run a tool directly from files
+cwlRun( "tool.cwl", "data.yaml")
 
-```{r}
-library(cwl)
-
-# Set up a simple data.yml file
-fileName <- tempfile()
-data <- c( "message: Hello world!", "" )
-writeLines(data, fileName)
-
-# Load the data file as an object
-cwlDataObj <- readCwlData(fileName)
-
-# Examine the data file object
-class(cwlDataObj)
-length(cwlDataObj)
-cwlDataObj[1]
+# Run a tool indirectly via object intermediaries.
+# Allows interaction with the tool and data info before running.
+toolObj <- readCwlTool( "tool.cwl" )
+dataObj <- readCwlData( "data.yaml" )
+cwlRun( toolObj, dataObj)
 ```
+
